# scapi

./: .dockerignore  .gitignore  .gitignore.orig  .gitmodules  AppP1.html  AppP1Original.html  AppP2.html  AppP2Original.html  Dockerfile  OfflineAppP1.html  OnlineAppP1.html  OnlineAppP1ForBatch.html  OnlineAppP2.html  OnlineAppP2ForBatch.html  Print.html  README.md  RunAllApp1.html  allclasses-frame.html  allclasses-noframe.html  build.sh  build.xml  constant-values.html  deprecated-list.html  help-doc.html  index.html  makefile  overview-frame.html  overview-summary.html  overview-tree.html  package-frame.html  package-list  package-summary.html  package-tree.html  package-use.html  pom.xml  rebuild.sh  serialized-form.html
class-use/: AppP1.html  AppP1Original.html  AppP2.html  AppP2Original.html  OfflineAppP1ForBatch.html  OfflineAppP2ForBatch.html  OnlineAppP1.html  OnlineAppP2.html  OnlineAppP2ForBatch.html  Print.html
doc/javadoc/SCAPI-V2-4-0/: AppP1.html  AppP1Original.html  AppP2.html  AppP2Original.html  OfflineAppP1ForBatch.html  OfflineAppP2.html  OfflineAppP2ForBatch.html  Print.html  RunAllApp2.html  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-frame.html  package-list  package-summary.html  package-tree.html  package-use.html  serialized-form.html
doc/releaseNotes/: SCAPI-V2-4-0 Release Notes.docx
doc/source/: SOC2016.rst  SummerOfCode2016  communication.rst  cpp_beta.rst  index.rst  install.rst  scapi in c++ (Beta).rst
dockerfiles/: DockerfileBuild  PrerequisitesDockerfie
index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-18.html  index-19.html  index-2.html  index-20.html  index-21.html  index-22.html  index-23.html  index-24.html  index-25.html  index-26.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
lib/MiraclCompilation/MiraclTest/: MiraclTest.cpp  MiraclTest.vcxproj
lib/MiraclCompilation/MiraclWin64/: MiraclWin64.vcxproj  MiraclWin64.vcxproj.filters
lib/OTExtensionCompilation/: OTExtension.cpp  OTExtension.sln  OTExtension.vcxproj  OTExtension.vcxproj.filters  ReadMe.txt  stdafx.cpp
lib/OTExtensionCompilation/OTExtensionProj/: OTExtension1.cpp  OTExtension1.vcxproj  OTExtension1.vcxproj.filters  ReadMe.txt  stdafx.cpp
src/cpp/CodeExamples/: code examples.vcxproj  code examples.vcxproj.filters  comm_example.cpp  makefile  readme.txt  simple_dlog.cpp  simple_sha1.cpp
src/cpp/Scapi/: Scapi.sln
src/cpp/ScapiCpp/: Makefile  ScapiCpp.sln  ScapiCpp.vcxproj  ScapiCpp.vcxproj.filters  readme.txt
src/cpp/code examples/: code examples.vcxproj
src/cpp/scapi_tests/: makefile  (+4 more)
src/jni/LibscapiJavaInterface/: CMakeLists.txt  GMWProtocol.cpp  GMWProtocol.h  LibscapiJavaInterface.sln  LibscapiJavaInterface.vcxproj.filters  MaliciousYaoProtocol.cpp  MaliciousYaoProtocol.h  YaoProtocol.cpp  YaoSingleExecutionProtocol.cpp  YaoSingleExecutionProtocol.h
src/jni/LibscapiJavaInterface/LibscapiJavaInterface/: CMakeLists.txt  GMWProtocol.cpp  GMWProtocol.h  LibscapiJavaInterface.vcxproj  LibscapiJavaInterface.vcxproj.filters  MaliciousYaoProtocol.cpp  MaliciousYaoProtocol.h  YaoProtocol.cpp  YaoProtocol.h  YaoSingleExecutionProtocol.cpp  YaoSingleExecutionProtocol.h
src/python/: find_primes.py
(+4446 files in other folders)
